fix zoom panel visibility and update changelog

--- a/stories/annotations.css
+++ b/stories/annotations.css
@@ -14,7 +14,8 @@
 }
 
 .picture {
-  max-width: 100%;
+  display: block;
+  width: 100%;
 }
 
 .annotations {
